--- a/190131/md/3_박지윤_웹 개발.md
+++ b/190131/md/3_박지윤_웹 개발.md
@@ -507,6 +507,9 @@ DB를 확인해보자 마지막줄에 내용이 저장되었음
 확인을 누르면 다시 초기화면은 로그인 폼으로 이동함
 
 
+이렇게 계획했던 1,2번은 완성함. 
+3,4번은 아직 완성시키지 못해서 조만간 완성해서 올리겠음 *^^* GOOD LUCK
+
 
 
 
